--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -4,7 +4,8 @@ set(UNIT_TESTS FGColumnVector3Test
                StringUtilitiesTest
                FGJSBBaseTest
                FGMatrix33Test
-               FGQuaternionTest)
+               FGQuaternionTest
+               FGLocationTest)
 
 foreach(test ${UNIT_TESTS})
   cxxtest_add_test(${test} ${test}.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${test}.h)
