Added a regression test that checks if all the scripts can be loaded.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  TestFuelTanksInertia
                  TestInputSocket
                  TestInitialConditions
+                 CheckScripts
                  TestGndReactions)
 
 foreach(test ${PYTHON_TESTS})
