Added a regression test that checks if all the aircrafts can be loaded

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  TestInputSocket
                  TestInitialConditions
                  CheckScripts
+                 CheckAircrafts
                  TestGndReactions)
 
 foreach(test ${PYTHON_TESTS})
