Added a test case to check the success of the project

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  CheckAircrafts
                  CheckOutputRate
                  TestAccelerometer
+                 TestOrbit
                  TestGndReactions)
 
 foreach(test ${PYTHON_TESTS})
