New test case to check that <output> commands called from a script are properly handled
# Conflicts:
#	tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,8 +31,9 @@ set(PYTHON_TESTS ResetOutputFiles
                  CheckAircrafts
                  CheckOutputRate
                  TestAccelerometer
-                 TestCosineGust
                  CheckDebugLvl
+                 TestCosineGust
+                 TestScriptOutput
                  TestOrbit
                  TestGndReactions)
 
