Check that the simulation time is reset to its initial value when resetting the whole sim
# Conflicts:
#	tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  CheckDebugLvl
                  TestCosineGust
                  TestScriptOutput
+                 CheckSimTimeReset
                  TestOrbit
                  TestGndReactions)
 
