First version of a test that checks the hold down feature
# Conflicts:
#	tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  TestCosineGust
                  TestScriptOutput
                  CheckSimTimeReset
+                 TestHoldDown
                  TestOrbit
                  TestGndReactions)
 
