Added a test for the Pitot tuble angle
# Conflicts:
#	tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,6 +37,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  TestScriptOutput
                  CheckSimTimeReset
                  TestHoldDown
+                 TestPitotAngle
                  TestOrbit
                  TestGndReactions)
 
