Added a regression test for bugs related to trimming that have been reported by FlightGear users
# Conflicts:
#	tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ set(PYTHON_TESTS ResetOutputFiles
                  CheckSimTimeReset
                  TestHoldDown
                  TestPitotAngle
+                 CheckTrim
                  TestOrbit
                  TestGndReactions)
 
